ferritin/src/snapshots/ferritin__tests__get_submodule_tty_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::submodule\"), OutputMode :: Tty,\n& get_fixture_crate_path ())"
---
Item: submodule
Kind: Module
Visibility: Public
Defined at: [fixture_crate](https://docs.rs/fixture-crate/0.1.0/fixture_crate/index.html)::[submodule](https://docs.rs/fixture-crate/0.1.0/fixture_crate/submodule/index.html)
In crate: fixture-crate (0.1.0)

A module with items

Structs

  ◦ [SubStruct](https://docs.rs/fixture-crate/0.1.0/fixture_crate/submodule/struct.SubStruct.html) 
    A struct in a submodule

Enums

  ◦ [TestEnum](https://docs.rs/fixture-crate/0.1.0/fixture_crate/submodule/enum.TestEnum.html) 
    An enum for testing [...]

Functions

  ◦ [sub_function](https://docs.rs/fixture-crate/0.1.0/fixture_crate/submodule/fn.sub_function.html) 
    A function in a submodule

Variants

  ◦ [VariantA](https://docs.rs/fixture-crate/0.1.0/fixture_crate/) 
    Variant A (see also [crate::GenericEnum](https://docs.rs/fixture-crate/0.1.0/fixture_crate/enum.GenericEnum.html))

  ◦ [VariantB](https://docs.rs/fixture-crate/0.1.0/fixture_crate/) 
    Variant B with data

  ◦ [VariantC](https://docs.rs/fixture-crate/0.1.0/fixture_crate/) 
    Variant C with struct data (name and value)
