ferritin/src/snapshots/ferritin__tests__get_trait_assoc_const_ai_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestTrait::ASSOCIATED_CONSTANT\"),\nOutputMode :: Ai, & get_fixture_crate_path ())"
---
AssocConst ASSOCIATED_CONSTANT (Private)

trait associated constant

const ASSOCIATED_CONSTANT: ();
