ferritin/src/snapshots/ferritin__tests__get_trait_assoc_const_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate::TestTrait::ASSOCIATED_CONSTANT\"),\n& get_fixture_crate_path ())"
---
{
  "canonicalUrl": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/",
  "header": [
    {
      "type": "metadata",
      "fields": [
        {
          "label": "Item",
          "value": [
            {
              "text": "ASSOCIATED_CONSTANT",
              "style": "Plain"
            }
          ]
        },
        {
          "label": "Kind",
          "value": [
            {
              "text": "AssocConst",
              "style": "Plain"
            }
          ]
        },
        {
          "label": "Visibility",
          "value": [
            {
              "text": "Private",
              "style": "Plain"
            }
          ]
        }
      ]
    },
    {
      "type": "truncatedBlock",
      "nodes": [
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "trait associated constant",
              "style": "Plain"
            }
          ]
        }
      ],
      "level": "Full"
    }
  ],
  "body": {
    "kind": "presentation",
    "nodes": [
      {
        "type": "generatedCode",
        "spans": [
          {
            "text": "const",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "ASSOCIATED_CONSTANT",
            "style": "Plain"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "(",
            "style": "Punctuation"
          },
          {
            "text": ")",
            "style": "Punctuation"
          },
          {
            "text": ";",
            "style": "Punctuation"
          }
        ]
      }
    ]
  }
}
