ferritin/src/snapshots/ferritin__tests__get_trait_assoc_const_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestTrait::ASSOCIATED_CONSTANT\"),\nOutputMode :: Plain, & get_fixture_crate_path ())"
---
Item: ASSOCIATED_CONSTANT
Kind: AssocConst
Visibility: Private

trait associated constant

const ASSOCIATED_CONSTANT: ();
