ferritin/src/snapshots/ferritin__tests__get_trait_assoc_const_test_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestTrait::ASSOCIATED_CONSTANT\"),\nOutputMode :: TestMode, & get_fixture_crate_path ())"
---
<metadata>
  <field name="Item">ASSOCIATED_CONSTANT</field>
  <field name="Kind">AssocConst</field>
  <field name="Visibility">Private</field>
</metadata>
<truncated level="full"><p>
trait associated constant</p>
</truncated>
<generated-code>
<keyword>const</keyword> ASSOCIATED_CONSTANT<punctuation>:</punctuation> <punctuation>(</punctuation><punctuation>)</punctuation><punctuation>;</punctuation></generated-code>
