ferritin/src/snapshots/ferritin__tests__get_trait_assoc_type_agent_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestTrait::T\"), OutputMode ::\nAi, & get_fixture_crate_path ())"
---
AssocType T (Private)

trait associated type

type T: Clone;
